Add route to update a game
